--- a/springboot-postgresql-hibernate-crud-example-main/pom.xml
+++ b/springboot-postgresql-hibernate-crud-example-main/pom.xml
@@ -39,8 +39,9 @@
 			<optional>true</optional>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jpa</artifactId>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<scope>runtime</scope>
 		</dependency>
 			<dependency>
 			<groupId>org.springframework.boot</groupId>
